<resources>
    <string name="app_name">Recipe</string>
    <string name="passwordPlaceholder">Password</string>
    <string name="usernamePlaceholder">Email</string>
    <string name="SignUp">Sign up</string>
    <string name="createAccount">Don\'t have an account?</string>
    <string name="proposeLogin">Already have an account?</string>
    <string name="profile">Profile</string>
    <string name="add">Add</string>
    <string name="home">Home</string>
    <string name="login">Login</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="what_are_you_cooking_today">What are you cooking today?</string>
    <string name="recent">Recent</string>
    <string name="ingredients">Ingredients</string>
    <string name="directions">Directions</string>
    <string name="back_button">Back</string>
    <string name="channel_id">My Channel</string>
    <string name="notification_title">New Recipe Added!</string>
    <string name="notification_content">Your recipe has been uploaded chef!</string>
    <string name="notification_denied">Notification Permission Request was denied. Kindly grant permission</string>
    <string name="channel_description">This is my notification channel</string>
    <string name="channel_name">My Unique channel</string>
    <string name="add_recipe">Add Recipe</string>
    <string name="capture_image">Capture Image</string>
    <string name="pick_image">Pick Image</string>
    <string name="date_published">Date Published</string>
    <string name="category">Category</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="v_0_0_1">v.0.0.1</string>
    <string name="logout">Logout</string>
</resources>