<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
        <Button
            android:id="@+id/back_btn"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back_button"
            android:textSize="16sp"
            android:drawableLeft="@drawable/baseline_arrow_back_ios_new_24"
            android:background="?attr/selectableItemBackground"
            android:padding="8dp" />
        <EditText
            android:id="@+id/edit_text_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/recipe_name"
            android:inputType="text" />

        <EditText
            android:id="@+id/edit_text_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/category"
            android:inputType="text" />

        <EditText
            android:id="@+id/edit_text_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/date_published"
            android:inputType="date" />

        <EditText
            android:id="@+id/edit_text_directions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/directions"
            android:inputType="textMultiLine"
            android:minLines="3" />

        <EditText
            android:id="@+id/edit_text_ingredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ingredients"
            android:inputType="textMultiLine"
            android:minLines="3" />

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:scaleType="centerCrop"
            android:background="@drawable/image_placeholder"
            android:layout_marginBottom="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_pick_image"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:cornerRadius="12dp"
                android:layout_marginEnd="20dp"
                tools:ignore="ButtonStyle"
                android:text="@string/pick_image" />

            <Button
                android:id="@+id/button_capture_image"
                android:layout_width="0dp"
                app:cornerRadius="12dp"
                tools:ignore="ButtonStyle"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/capture_image" />

        </LinearLayout>


        <Button
            android:id="@+id/button_add_recipe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            app:cornerRadius="12dp"
            tools:ignore="ButtonStyle"
            android:text="@string/add_recipe" />
    </LinearLayout>

</ScrollView>
