<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="50dp"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    >

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profile_image"
        android:layout_width="145dp"
        android:layout_height="145dp"
        android:src="@drawable/recipe"
        android:scaleType="centerCrop"
        app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
        app:strokeColor="@color/green"
        app:strokeWidth="2dp" />

    <TextView
        android:id="@+id/text_card_holder"
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:fontFamily="serif-monospace"
        android:text="@string/app_name"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        app:autoSizeTextType="uniform" />

    <EditText
        android:id="@+id/edit_text_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:hint="@string/usernamePlaceholder"
        android:padding="12dp"
        android:inputType="textEmailAddress"
        android:drawableStart="@drawable/baseline_person_24"
        android:drawablePadding="8dp"
        android:autofillHints="emailAddress" />

    <EditText
        android:id="@+id/edit_text_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:hint="@string/passwordPlaceholder"
        android:padding="12dp"
        android:inputType="textPassword"
        android:drawableStart="@drawable/baseline_lock_outline_24"
        android:drawablePadding="8dp"
        android:autofillHints="password" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

    <Button
        android:id="@+id/button_login"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:text="Login"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="serif"
        android:backgroundTint="@color/green"
        android:textAllCaps="false" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        >

        <TextView
            android:id="@+id/proposeSignUp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/createAccount"
            android:layout_marginEnd="15sp"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/text_view_signup"
            android:layout_width="wrap_content"
            android:textSize="18sp"
            android:textStyle="italic"
            android:layout_height="match_parent"
            android:text="@string/SignUp" />

    </LinearLayout>
</LinearLayout>
